--- a/FoodCart/pom.xml
+++ b/FoodCart/pom.xml
@@ -29,10 +29,10 @@
 			<version>2.0.2</version>
 		</dependency>
 
-		<dependency>
-			<groupId>io.github.resilience4j</groupId>
-			<artifactId>resilience4j-spring-boot3</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>io.github.resilience4j</groupId>-->
+<!--			<artifactId>resilience4j-spring-boot3</artifactId>-->
+<!--		</dependency>-->
 <dependency>
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-starter-loadbalancer</artifactId>
