--- a/OrderDetails/pom.xml
+++ b/OrderDetails/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.0.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.FoodCartService</groupId>
-	<artifactId>FoodCart</artifactId>
+	<groupId>com.OrderDetails</groupId>
+	<artifactId>OrderDetails</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>FoodCart</name>
-	<description>FoodCart Micro Service</description>
+	<name>OrderDetails</name>
+	<description>OrderDetais Micro Service</description>
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2022.0.2</spring-cloud.version>
@@ -29,19 +29,15 @@
 			<version>2.0.2</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>io.github.resilience4j</groupId>-->
-<!--			<artifactId>resilience4j-spring-boot3</artifactId>-->
-<!--		</dependency>-->
-<dependency>
-    <groupId>org.springframework.cloud</groupId>
-    <artifactId>spring-cloud-starter-loadbalancer</artifactId>
-</dependency>
-
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<!--dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-spring-boot3</artifactId>
+		</dependency-->
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-feign</artifactId>
@@ -57,13 +53,6 @@
 		<!--			<groupId>org.springframework.boot</groupId>-->
 		<!--			<artifactId>spring-boot-starter-security</artifactId>-->
 		<!--		</dependency>-->
-
-		<dependency>
-    		<groupId>org.springframework.cloud</groupId>
-    		<artifactId>spring-cloud-starter-loadbalancer</artifactId>
-		</dependency>
-
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
